# phantomx

./: README.md  start.sh
phantomx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  phantomx_reactor_arm.srdf  ros_controllers.yaml
phantomx_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  phantomx_reactor_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
phantomx_myanmar_custom_msg/: CMakeLists.txt  package.xml
phantomx_myanmar_custom_msg/action/: Grasp.action  PickAndPlace.action
phantomx_myanmar_custom_msg/srv/: custom.srv
phantomx_myanmar_developer/: CMakeLists.txt  package.xml
phantomx_myanmar_developer/config/: phantomx_jog.yaml  phantomx_tra_jog.yaml
phantomx_myanmar_developer/launch/: phantomx.launch  real_robot_pick_place.sh  simulation_robot_pick_place.sh  test.sh
phantomx_myanmar_developer/project/simple_object_recognize/: CMakeLists.txt
phantomx_myanmar_developer/project/simple_pick_and_place/: CMakeLists.txt  add_collision_object.cpp  move_group_interface_tutorial.cpp  myanmar_get_current_position.cpp  myanmar_pick_pose_publisher.cpp  myanmar_simple_grasp_client.cpp  myanmar_simple_grasp_server.cpp
phantomx_myanmar_developer/scripts/: pick_place_pose_publisher.py
phantomx_myanmar_developer/training/: CMakeLists.txt
phantomx_myanmar_developer/training/src/: joyandgo.cpp  move_group_inf_tuto.cpp  move_test.cpp
phantomx_no_wrist_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_no_wrist_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  phantomx_reactor_arm.srdf  ros_controllers.yaml
phantomx_no_wrist_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  phantomx_reactor_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
phantomx_reactor_arm_controller/: CMakeLists.txt  package.xml
phantomx_reactor_arm_controller/config/: dynamixel_controllers_no_wrist.yaml  phantomx.rviz
phantomx_reactor_arm_controller/launch/: dynamixel_phantomx_reactor_arm_no_wrist.launch  dynamixel_phantomx_reactor_arm_no_wrist_start.launch  dynamixel_phantomx_reactor_arm_none_wrist.launch  dynamixel_phantomx_reactor_arm_wrist.launch
phantomx_reactor_arm_controller/src/: dynamixel_joint_state_publisher.py  gripper_controller.py  phantomx_reactor_gripper.py
phantomx_reactor_arm_description/launch/: phantomx_reactor_no_wrist_load_description.launch
phantomx_reactor_arm_description/robots/: ikfast61_arm.cpp  phantomx_reactor_arm_no_wrist.urdf.xacro  phantomx_reactor_arm_none_wrist.urdf.xacro  phantomx_reactor_arm_wrist.urdf
phantomx_reactor_arm_description/urdf/: phantomx_reactor_no_wrist.urdf.xacro  phantomx_reactor_no_wrist.urdf.xacro.backup  phantomx_reactor_none_wrist.urdf.xacro
phantomx_reactor_arm_moveit_config/: .setup_assistant  package.xml
phantomx_reactor_arm_moveit_config/config/: controllers.yaml  ompl_planning.yaml  phantomx_reactor_arm.srdf  ros_controllers.yaml
phantomx_reactor_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  phantomx_reactor_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
