

#add_executable(block_detection_action_server block_detection_action_server.cpp)
#target_link_libraries(block_detection_action_server ${catkin_LIBRARIES} ${Boost_LIBRARIES})
#install(TARGETS block_detection_action_server DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})

#add_executable(block_manipulation_actions block_manipulation_actions.cpp)
#target_link_libraries(block_manipulation_actions ${catkin_LIBRARIES} ${Boost_LIBRARIES})
#install(TARGETS block_manipulation_actions DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})

